hide the other sheets until they are converted

--- a/Shadowrun4thEdition/Shadowrun4thEdition.css
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.css
@@ -178,8 +178,15 @@ input.sheet-toggle {
 .repcontrol .repcontrol_add:after, .editmode ~ .repcontrol .repcontrol_edit:after, .itemcontrol .repcontrol_del {
   font-family: 'Pictos'; }
 
+.sheet-pictos-custom,
 span.sheet-pictos-custom {
   font-family: 'Pictos Custom'; }
+
+span.sheet-pictos3 {
+  font-family: 'Pictos Three'; }
+
+span.sheet-d6 {
+  font-family: 'dicefontd6'; }
 
 .sheet-font-bold {
   font-weight: bold; }
@@ -2060,15 +2067,6 @@ input.sheet-spell-toggle {
 .sheet-character-type[value='resonance'] ~ .sheet-resonance + .sheet-resonance {
   display: inline-block;
   width: 100%; }
-
-span.sheet-pictosC {
-  font-family: 'Pictos Custom'; }
-
-span.sheet-pictos3 {
-  font-family: 'Pictos Three'; }
-
-span.sheet-d6 {
-  font-family: 'dicefontd6'; }
 
 /******************************************************************************************/
 /**************************** START OF THE NPC SHEET *************************************/
