--- a/Shadowrun4thEdition/Shadowrun4thEdition.pug
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.pug
@@ -299,7 +299,7 @@ include src/pug/_variables.pug
                 span.bold(name='attr_name')
               each val in armorTypes
                 - const attrName = val.toLowerCase();
-                button(name=`roll_${attrName}` type='roll' value!=noWoundsRollBegining+`{{header=@{name}}}{{base=^{armor}}}{{dice=[[((@{${attrName}}+@{body}+@{modifier})`+noWoundsRollEnding)
+                button(name=`roll_${attrName}` type='roll' value!=noWoundsRollBegining+`{{header=@{name}}}{{base=^{armor}}}{{dice=[[((@{${attrName}}+@{soak}+@{modifier})`+noWoundsRollEnding)
                   span.center(name=`attr_${attrName}`)
               input.collapse-flag(name='attr_display_flag' type='checkbox')
               span.pictos i
@@ -309,9 +309,9 @@ include src/pug/_variables.pug
                 each val in armorProtectionsButtons
                   - const attrName = val.toLowerCase();
                   input(type='hidden' name=`attr_${attrName}`)
-                  button(data-i18n=`${val} Protection` name=`roll_${attrName}` type='roll' value!=noWoundsRollBegining+`{{header=^{${val} Protection}}}{{base=^{armor}}}{{dice=[[((@{impact}/2)+@{${attrName}_modifier}+@{body}+@{modifier})`+noWoundsRollEnding)
-                button(data-i18n=`Laser Protection` name=`roll_laser` type='roll' value!=noWoundsRollBegining+`{{header=^{Laser Protection}}}{{base=^{armor}}}{{dice=[[((@{impact}/2)+@{radiation_modifier}+@{laser_modifier}+@{body}+@{modifier})`+noWoundsRollEnding)
-                button(data-i18n=`Gause Round Armor` name=`roll_gause` type='roll' value!=noWoundsRollBegining+`{{header=^{Gause Round Armor}}}{{base=^{armor}}}{{dice=[[((@{ballistic}/2)+@{gause_modifier}+@{body}+@{modifier})`+noWoundsRollEnding)
+                  button(data-i18n=`${val} Protection` name=`roll_${attrName}` type='roll' value!=noWoundsRollBegining+`{{header=^{${val} Protection}}}{{base=^{armor}}}{{dice=[[((@{impact}/2)+@{${attrName}_modifier}+@{soak}+@{modifier})`+noWoundsRollEnding)
+                button(data-i18n=`Laser Protection` name=`roll_laser` type='roll' value!=noWoundsRollBegining+`{{header=^{Laser Protection}}}{{base=^{armor}}}{{dice=[[((@{impact}/2)+@{radiation_modifier}+@{laser_modifier}+@{soak}+@{modifier})`+noWoundsRollEnding)
+                button(data-i18n=`Gause Round Armor` name=`roll_gause` type='roll' value!=noWoundsRollBegining+`{{header=^{Gause Round Armor}}}{{base=^{armor}}}{{dice=[[((@{ballistic}/2)+@{gause_modifier}+@{soak}+@{modifier})`+noWoundsRollEnding)
                 .row
                   span(name='attr_notes')
               .settings
