--- a/Shadowrun4thEdition/src/pug/_variables.pug
+++ b/Shadowrun4thEdition/src/pug/_variables.pug
@@ -19,6 +19,10 @@
 //- WEAPON ARRAY
 - const weaponModes = ['BF', 'FA', 'SA', 'SS', 'Other'];
 
+//- SHEET TYPES
+//- - const sheetTypes = ['Grunt', 'Host', 'Sprite', 'Vehicle', 'PC'];
+- const sheetTypes = ['Grunt', 'PC'];
+
 //- TABS
 - const tabs = ['core', 'arms', 'augs', 'gear', 'magic', 'matrix', 'social', 'vehicle'];
 
