--- a/Shadowrun4thEdition/src/scss/base/_typography.scss
+++ b/Shadowrun4thEdition/src/scss/base/_typography.scss
@@ -16,9 +16,18 @@
   font-family: 'Pictos'; 
 }
 
+.sheet-pictos-custom,
 span.sheet-pictos-custom { 
   font-family: 'Pictos Custom'; 
 }
+
+span.sheet-pictos3 {
+  font-family: 'Pictos Three';
+}
+
+span.sheet-d6 {
+  font-family: 'dicefontd6';
+}  
 
 .sheet-font-bold {
   font-weight: bold;
