fix translation keys

--- a/Shadowrun4thEdition/Shadowrun4thEdition.pug
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.pug
@@ -291,7 +291,7 @@ include src/pug/_variables.pug
           .rows.repeating-container
             - const armorRepeatingSection = '@{repeating_armor_${x}';
             .row-long.headers
-              each val in ['Armor', 'ballistic', 'Impact']
+              each val in ['armor', 'ballistic', 'impact']
                 h2(data-i18n=`${val.toLowerCase()}`) #{val}
             fieldset(class='repeating_armor')
               input.flag-primary(name='attr_primary' type='hidden' value='')
