--- a/Shadowrun4thEdition/src/pug/_npc.pug
+++ b/Shadowrun4thEdition/src/pug/_npc.pug
@@ -148,10 +148,10 @@
 		//- MODIFIERS				
 		.column
 			h1.settings(data-i18n='modifier') Modifier
-			each val in ['Ballistic', 'Impact']
+			each val in ['ballistic', 'impact']
 				- const attrName = val.toLowerCase();
 				.rows
-					+rollButton(val, 'base', `@{${attrName}}+@{soak}`)
+					+rollButton(attrName, 'base', `@{${attrName}}+@{soak}`)
 					label.settings(data-i18n-title=val)
 						input(name=`attr_${val}` placeholder='9' title=`@{${attrName}}` type='number' value='0')
 			each val in armorProtectionsInputs
