first steps moving to no API call in the sheet

--- a/Fading Suns v2.75/Fading_Suns_v2.75.css
+++ b/Fading Suns v2.75/Fading_Suns_v2.75.css
@@ -299,12 +299,13 @@ h2.sheet-fs-clickheader {
     display: inline-block;
     margin-left: -.25em;
 }
+
 .sheet-fs-showarrow.sheet-fs-h2arrow,
 .sheet-fs-showarrow.sheet-h3arrow,
 .sheet-fs-showarrow.sheet-conditions-show,
 .sheet-fs-showarrow.sheet-buffs-show {
-    width: 20em;
-    margin-right: -20em;
+    width: 1.5em;
+    margin-right: -1.5em;
 }
 
 .sheet-split-column-show:not(:checked) ~ .sheet-repeating-fields .sheet-sect.sheet-expand .sheet-fs-showarrow:first-child {
@@ -497,6 +498,8 @@ div.repcontrol {
 /************************************    TOGGLES **************************************/
 /* edit view h2 and h3 arrows*/
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-h2-section,
+.sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + button,
+.sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + button + .sheet-fs-h2-section,
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-h2-section + .sheet-fs-h2-section,
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-h2-section + .sheet-fs-h2-section + .sheet-fs-h2-section,
 .sheet-fs-h2arrow:not(:checked) + .sheet-fs-showsect + .sheet-fs-nontable-name,
@@ -637,11 +640,16 @@ div.repcontrol {
     margin-bottom:20px;
 }
 
+.sheet-fs-noshow {
+    display:none;
+}
+
 .sheet-rolltemplate-fs-button {
     text-align: center;
 }
 
 .sheet-rolltemplate-fs-GoalRoll .sheet-fs-container,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .sheet-fs-container,
 .sheet-rolltemplate-fs-ApiError .sheet-fs-container,
 .sheet-rolltemplate-fs-InitRoll .sheet-fs-container,
 .sheet-rolltemplate-fs-d6Roll .sheet-fs-container {
@@ -656,6 +664,7 @@ div.repcontrol {
 }
 
 .sheet-rolltemplate-fs-GoalRoll .sheet-fs-container h1,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .sheet-fs-container h1,
 .sheet-rolltemplate-fs-ApiError .sheet-fs-container h1,
 .sheet-rolltemplate-fs-InitRoll .sheet-fs-container h1,
 .sheet-rolltemplate-fs-d6Roll .sheet-fs-container h1 {
@@ -666,6 +675,7 @@ div.repcontrol {
 }
 
 .sheet-rolltemplate-fs-GoalRoll div,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI div,
 .sheet-rolltemplate-fs-ApiError div,
 .sheet-rolltemplate-fs-InitRoll div,
 .sheet-rolltemplate-fs-d6Roll {
@@ -673,6 +683,7 @@ div.repcontrol {
 };
  
 .sheet-rolltemplate-fs-GoalRoll span,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI span,
 .sheet-rolltemplate-fs-ApiError span,
 .sheet-rolltemplate-fs-InitRoll span,
 .sheet-rolltemplate-fs-d6Roll span {
@@ -686,6 +697,7 @@ div.repcontrol {
 }
 
 .sheet-rolltemplate-fs-GoalRoll .sheet-fs-arrow-right,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .sheet-fs-arrow-right,
 .sheet-rolltemplate-fs-ApiError .sheet-fs-arrow-right,
 .sheet-rolltemplate-fs-InitRoll .sheet-fs-arrow-right,
 .sheet-rolltemplate-fs-d6Roll .sheet-fs-arrow-right {
@@ -695,37 +707,45 @@ div.repcontrol {
 }
 
 .sheet-rolltemplate-fs-GoalRoll .inlinerollresult,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .inlinerollresult,
 .sheet-rolltemplate-fs-InitRoll .inlinerollresult {
     background-color: transparent;
     border: none;
     font-weight: normal;
 }
 
-.sheet-rolltemplate-fs-GoalRoll .sheet-fs-critsuccess {
+.sheet-rolltemplate-fs-GoalRoll .sheet-fs-critsuccess,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .sheet-fs-critsuccess {
     color: #3FB315;
 }
 
-.sheet-rolltemplate-fs-GoalRoll .sheet-fs-success {
+.sheet-rolltemplate-fs-GoalRoll .sheet-fs-success,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .sheet-fs-success {
     color: #205b0b;
 }
 
-.sheet-rolltemplate-fs-GoalRoll .sheet-fs-failure {
+.sheet-rolltemplate-fs-GoalRoll .sheet-fs-failure,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .sheet-fs-failure {
     color: #5b0b0b;
 }
 
-.sheet-rolltemplate-fs-GoalRoll .sheet-fs-critfailure {
+.sheet-rolltemplate-fs-GoalRoll .sheet-fs-critfailure,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .sheet-fs-critfailure {
     color: #B31515;
 }
 
-.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.fullcrit {
+.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.fullcrit,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .inlinerollresult.fullcrit {
     border: none;
 }
 
-.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.importantroll {
+.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.importantroll,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .inlinerollresult.importantroll {
     border: none;
 }
 
-.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.fullfail {
+.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.fullfail,
+.sheet-rolltemplate-fs-GoalRoll-fromAPI .inlinerollresult.fullfail {
     border: none;
 }
 
@@ -1025,6 +1045,18 @@ input.sheet-fs-beneficeaffliction {
 .sheet-fs-characteristic input,
 .sheet-fs-skill-label {
     margin-left: 3px;
+}
+
+.sheet-fs-characteristic label input[type="radio"],
+.sheet-fs-skill label input[type="radio"] {
+    display: none;
+}
+
+.sheet-fs-characteristic label input:checked + span,
+.sheet-fs-skill label input:checked + span {
+    text-decoration: underline;
+    color: #4a6486;
+    text-decoration-color: #4a6486;
 }
 
 h2.sheet-fs-clickheader {
