- fixed potential css encoding issue - added missing event in sheet workers

--- a/Fading Suns v2.75/Fading_Suns_v2.75.css
+++ b/Fading Suns v2.75/Fading_Suns_v2.75.css
@@ -357,7 +357,6 @@ div.repcontrol {
     color: #4a6486;
 }
 .repcontrol .repcontrol_edit:after {
-/*    content: 'W'; hamburger menu*/
     font-family: Arial ;
     font-weight: bold;
     content: '☰';
@@ -378,7 +377,6 @@ div.repcontrol {
 .repcontrol_edit:hover:before,
 .repcontrol_edit:hover:after, 
 .repcontrol_add:hover:before {
-/*    background-color: #EFEFEF; */
     color: red !important;
     box-shadow: 0.1rem 0.1rem 0.2rem #333;
 }
@@ -869,7 +867,7 @@ div.repcontrol {
 .sheet-fs-rating > *:not(.sheet-fs-rating-null):hover:before,
 .sheet-fs-rating > *:hover ~ span:not(.sheet-fs-rating-null):before,
 .sheet-fs-rating:not(:hover) > input:checked ~ span:not(.sheet-fs-rating-null):before {
-    content: "■";
+    content: '■';
     position: absolute;
     left: 0;
     color: #4a6486;
