finsihed translation layout tweaks

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -240,14 +240,15 @@ hr.sheet-horizontal-rule::before {
 
 span.sheet-readonly,
 input.sheet-monster_only:checked~div.sheet-character .sheet-monster+span.sheet-monster.sheet-readonly {
-  font-size: 2em;
-  font-style: italic;
+  font-size: 24px;
+  color: #555;
   justify-self: center;
   line-height: .85em;
   width: 1em;
   display: flex;
   justify-content: center;
   padding: 2px 0 0 0;
+  cursor: help;
 }
 
 /* Hide actual radio */
@@ -297,7 +298,7 @@ input[name="attr_strength"][value="9"] ~ input.sheet-skull:nth-of-type(1n+12) + 
 input[name="attr_strength"][value="10"] ~ input.sheet-skull:nth-of-type(1n+13) + span::before,
 input[name="attr_strength"][value="11"] ~ input.sheet-skull:nth-of-type(1n+14) + span::before,
 input[name="attr_strength"][value="12"] ~ input.sheet-skull:nth-of-type(1n+15) + span::before {
-  opacity: .25;
+  opacity: 0;
 }
 
 input[name="attr_strength"][value="13"] ~ input.sheet-skull:nth-of-type(1n+16) + span::before,
@@ -312,7 +313,7 @@ input[name="attr_strength"][value="21"] ~ input.sheet-skull:nth-of-type(1n+24) +
 input[name="attr_strength"][value="22"] ~ input.sheet-skull:nth-of-type(1n+25) + span::before,
 input[name="attr_strength"][value="23"] ~ input.sheet-skull:nth-of-type(1n+26) + span::before,
 input[name="attr_strength"][value="24"] ~ input.sheet-skull:nth-of-type(1n+27) + span::before {
-  opacity: .25;
+  opacity: 0;
 }
 
 input[name="attr_strength"][value="25"] ~ input.sheet-skull:nth-of-type(1n+28) + span::before,
@@ -327,7 +328,7 @@ input[name="attr_strength"][value="33"] ~ input.sheet-skull:nth-of-type(1n+37) +
 input[name="attr_strength"][value="34"] ~ input.sheet-skull:nth-of-type(1n+38) + span::before,
 input[name="attr_strength"][value="35"] ~ input.sheet-skull:nth-of-type(1n+39) + span::before,
 input[name="attr_strength"][value="36"] ~ input.sheet-skull:nth-of-type(1n+40) + span::before {
-  opacity: .25;
+  opacity: 0;
 }
 
 input[name="attr_strength"][value="37"] ~ input.sheet-skull:nth-of-type(1n+41) + span::before,
@@ -343,7 +344,7 @@ input[name="attr_strength"][value="46"] ~ input.sheet-skull:nth-of-type(1n+50) +
 input[name="attr_strength"][value="47"] ~ input.sheet-skull:nth-of-type(1n+51) + span::before,
 input[name="attr_strength"][value="48"] ~ input.sheet-skull:nth-of-type(1n+52) + span::before,
 input[name="attr_strength"][value="49"] ~ input.sheet-skull:nth-of-type(1n+53) + span::before {
-  opacity: .25;
+  opacity: 0;
 }
 
 input[name="attr_agility"][value="0"] ~ input.sheet-skull:nth-of-type(1n+3) + span::before,
@@ -353,7 +354,7 @@ input[name="attr_agility"][value="3"] ~ input.sheet-skull:nth-of-type(1n+6) + sp
 input[name="attr_agility"][value="4"] ~ input.sheet-skull:nth-of-type(1n+7) + span::before,
 input[name="attr_agility"][value="5"] ~ input.sheet-skull:nth-of-type(1n+8) + span::before,
 input[name="attr_agility"][value="6"] ~ input.sheet-skull:nth-of-type(1n+9) + span::before {
-  opacity: .25;
+  opacity: 0;
 }
 
 input[name="attr_wits"][value="0"] ~ input.sheet-skull:nth-of-type(1n+3) + span::before,
@@ -363,7 +364,7 @@ input[name="attr_wits"][value="3"] ~ input.sheet-skull:nth-of-type(1n+6) + span:
 input[name="attr_wits"][value="4"] ~ input.sheet-skull:nth-of-type(1n+7) + span::before,
 input[name="attr_wits"][value="5"] ~ input.sheet-skull:nth-of-type(1n+8) + span::before,
 input[name="attr_wits"][value="6"] ~ input.sheet-skull:nth-of-type(1n+9) + span::before {
-  opacity: .25;
+  opacity: 0;
 }
 
 input[name="attr_empathy"][value="0"] ~ input.sheet-skull:nth-of-type(1n+3) + span::before,
@@ -373,7 +374,7 @@ input[name="attr_empathy"][value="3"] ~ input.sheet-skull:nth-of-type(1n+6) + sp
 input[name="attr_empathy"][value="4"] ~ input.sheet-skull:nth-of-type(1n+7) + span::before,
 input[name="attr_empathy"][value="5"] ~ input.sheet-skull:nth-of-type(1n+8) + span::before,
 input[name="attr_empathy"][value="6"] ~ input.sheet-skull:nth-of-type(1n+9) + span::before {
-  opacity: .25;
+  opacity: 0;
 }
 
 /* Broken Indicators */
@@ -1035,7 +1036,7 @@ input.sheet-expand:checked+span::before {
 .repitem .sheet-mount_gear-grid:hover input.sheet-expand+span::before,
 .repitem .sheet-spells-grid:hover input.sheet-expand+span::before,
 .sheet-skills-row:hover input.sheet-expand+span::before {
-  opacity: 0.75;
+  opacity: 0.85;
 }
 
 input.sheet-expand~.sheet-input-textarea,
@@ -1444,8 +1445,7 @@ input.sheet-dice_only:checked~div.sheet-character .sheet-box.sheet-character-ski
 }
 
 .sheet-input-span {
-  font-size: 2.5em;
-  font-style: italic;
+  font-size: 24px;
   z-index: 1;
   display: flex;
   align-items: center;
@@ -1455,8 +1455,8 @@ input.sheet-dice_only:checked~div.sheet-character .sheet-box.sheet-character-ski
   box-sizing: border-box;
   width: 34px;
   height: 34px;
-  cursor: not-allowed;
-  color: #333;
+  color: #555;
+  cursor: help;
   /*
   border: 1px solid #000;
   border-radius: 50%;
