Tweaks to repeating fields, fonts

--- a/Paladin/paladin.css
+++ b/Paladin/paladin.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Viaoda+Libre&display=swap');
-@import url('https://fonts.googleapis.com/css?family=UnifrakturMaguntia&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Viaoda+Libre|UnifrakturMaguntia&display=swap');
 
 
 /* GLOBALS
