--- a/Paladin/paladin.pug
+++ b/Paladin/paladin.pug
@@ -7,10 +7,10 @@ include src/pug/mixins.pug
 
 //- VARIABLES
  =============================
-- const personalityTraits = {'chaste':'lustful', 'energetic':'lazy', 'forgiving':'vengeful','generous':'selfish','honest':'deceitful','just':'arbitrary','merciful':'cruel','modest':'proud','prudent':'reckless','spiritual':'wordly','temperate':'indulgent','trusting':'suspicious','valorous':'cowardly'};
+- const personalityTraits = {'chaste':'lustful', 'energetic':'lazy', 'forgiving':'vengeful', 'generous':'selfish', 'honest':'deceitful', 'just':'arbitrary', 'merciful':'cruel', 'modest':'proud', 'prudent':'reckless', 'spiritual':'wordly', 'temperate':'indulgent', 'trusting':'suspicious', 'valorous':'cowardly'};
 - const attributes = ['size', 'dex', 'str', 'con', 'app'];
-- const skills = ['awareness', 'boating', 'chirurgery', 'compose', 'courtesy', 'dancing', 'faerie lore', 'falconry', 'fashion', 'first aid', 'flirting', 'folk lore', 'gaming', 'heraldry', 'hunting', 'industry', 'intrigue', 'orate', 'play', 'read', 'recognize', 'religion', 'romance', 'singing', 'stewardship', 'swimming', 'tourney'];
-- const gmCharacters = ['name', 'glory', 'app',  'courtesy', 'flirting', 'intrigue', 'chaste', 'modest', 'temperate'];
+- const skills = ['awareness', 'chirurgery', 'faerie lore', 'first aid', 'folk lore', 'hunting', 'industry', 'recognize', 'religion', 'stewardship', 'swimming', 'courtesy', 'dancing', 'eloquence', 'falconry', 'gaming', 'heraldry', 'intrigue', 'languages', 'play', 'read', 'romance', 'singing'];
+- const gmCharacters = ['name', 'glory', 'app',  'courtesy', 'romance', 'intrigue', 'chaste', 'modest', 'temperate'];
 
 //- TABS
   =============================
