--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1899,6 +1899,15 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
     width: calc(100% - 326px);
 }
 
+.sheet-active-defense .sheet-reset  {
+    height: 19px;
+    line-height: 19px;
+    color: white;
+    background: darkred;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
 .sheet-active-defense .sheet-col0 input { text-align:left; }
 .sheet-active-defense .sheet-col1 { width: 105px; }
 .sheet-active-defense .sheet-col2 { width: 40px; }
