fixed whisper option on notes rolls

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -592,17 +592,50 @@ input.sheet-hidden.sheet-api-toggle-show:checked~div.sheet-grid-item.sheet-api-r
 .repcontrol_add,
 .repcontrol_edit,
 .repcontrol_del {
-  width: 3.25em;
+  width: 2em;
   height: 1.2em;
   margin: 1px;
   padding: 0 1px 3px 1px;
   box-shadow: none;
+  color: transparent;
 }
 
 .repcontrol_move {
   float: right;
   margin-right: 5px;
   cursor: move;
+}
+
+button.btn.repcontrol_edit:after {
+  font-family: Pictos;
+  content: '(';
+  color: black;
+  margin: 0 0 0 -38px;
+}
+
+.repcontainer.ui-sortable.editmode ~ .repcontrol button.btn.repcontrol_edit:after {
+  margin: 0 0 0 -28px;
+}
+
+button.btn.repcontrol_add:after {
+  font-family: Pictos;
+  content: '&';
+  color: black;
+  margin: 0 0 0 -31px;
+}
+
+button.btn:hover.repcontrol_edit:after,
+button.btn:hover.repcontrol_add:after,
+button.btn:hover.repcontrol_del:after {
+  color: #a60100;
+}
+
+a.btn.repcontrol_move:hover {
+  color: #a60100;
+}
+
+button.btn.btn-danger.pictos.repcontrol_del:hover {
+  color: #fff;
 }
 
 /* Sheet Tabs */
@@ -3673,10 +3706,7 @@ input.sheet-stronghold-hirelings-box3 {
 
 button[type="action"]:hover,
 button[type="action"]:hover>span,
-button[type="roll"]:hover,
-button.btn.repcontrol_edit:hover,
-button.btn.repcontrol_add:hover,
-button.btn.repcontrol_del:hover {
+button[type="roll"]:hover {
   color: #fff;
   background: #a60100;
 }
