--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1908,6 +1908,10 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
     font-weight: bold;
 }
 
+.sheet-active-defense .sheet-col-input-wide {
+    width: calc(100% - 167px);
+}
+
 .sheet-active-defense .sheet-col0 input { text-align:left; }
 .sheet-active-defense .sheet-col1 { width: 105px; }
 .sheet-active-defense .sheet-col2 { width: 40px; }
