--- a/DnD_Moldvay_AmandatheAmazon/D&D_Moldvay_AmandatheAmazon.css
+++ b/DnD_Moldvay_AmandatheAmazon/D&D_Moldvay_AmandatheAmazon.css
@@ -799,7 +799,7 @@
     width: 2.4em !important;
 }
 .charsheet input[type=number].sheet-tinyinput {
-    width:33px;s
+    width:33px;
     text-align: center;
     /*font-size:11px;*/
     font-size: 17px;
