Critical UI /stat display bugfixes
The print-release version of the sheet was pushed with some significant UI bugs for Firefox users. These changes address those bugs, in addition to some minor display fixes.

--- a/LANCER RPG (1.8)/LANCER.css
+++ b/LANCER RPG (1.8)/LANCER.css
@@ -1,5 +1,7 @@
 * {box-sizing: border-box;}
-
+input[type=number] {/*workaround for firefox jank*/
+  -moz-appearance: textfield;
+}
 
 /*-------------BASIC FLEX SETUP-------------*/
 
