--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1,5 +1,17 @@
 .charsheet {
-    background: white;
+    --main-text:black;          /*Main text font*/
+    --highlight-text:black;
+    --secondary-highlight:#334739;
+    --header-text:white;
+    --sheet-bg: white;
+    --box-bg:#5f8c86;
+    --header-bg:#347970;
+    --row-bg:#8ebcb6;
+    --odd-row-bg:#7da8a2;
+    --input-disabled-bg:#c9c9c9;
+    --border-color:#033530;
+    color:var(--main-text);
+    background: var(--sheet-bg);
     min-height: 100%;
 }
 
@@ -10,7 +22,9 @@
 .sheet-box {
     box-sizing: border-box;
     font-size: 12px;
+    width: 100%;
     float: left;
+    background-image: linear-gradient(var(--box-bg),var(--sheet-bg));
     margin: 0.2em;
     overflow: auto;
     outline: 1px solid gray;
@@ -21,8 +35,10 @@
     text-align: right;
 }
 
+.sheet-title{width: 100%;}
+
 .sheet-hr {
-    box-shadow: 0 -1px 0 #000;
+    box-shadow: 0 -1px 0 var(--main-text);
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -36,8 +52,8 @@
 .sheet-section-heading {
     width: 100%;
     margin: 10px .2em;
-    background-color: #f0f0f0;
-    outline: 1px solid #f0f0f0;
+    background: var(--header-bg);
+    outline: 1px solid var(--header-bg);
     float: left;
 }
 
@@ -47,8 +63,8 @@
 
 .sheet-section-heading.sheet-combat-tools .sheet-header {
     font-size: 15px;
-    color: #fff;
-    background: #555;
+    color: white;
+    background: var(--header-bg);
 }
 
 /* -- Announcements -- */
@@ -80,7 +96,7 @@ input[name="attr_announcements_hide"][value="1"] ~ .sheet-update-alert {
     position: relative;
     cursor: pointer;
     font-size: 12px;
-    color: darkred;
+    color: var(--highlight-text);
 }
 
 .sheet-update-alert .sheet-container label.sheet-show-content:before {
@@ -89,7 +105,7 @@ input[name="attr_announcements_hide"][value="1"] ~ .sheet-update-alert {
     width: 1em;
     height: 1em;
     font-size: 1em;
-    color: darkred;    
+    color: var(--highlight-text);    
 }
 
 .sheet-update-alert .sheet-container input[type=checkbox].sheet-ack-button:checked ~ label.sheet-show-content:before {
@@ -98,7 +114,7 @@ input[name="attr_announcements_hide"][value="1"] ~ .sheet-update-alert {
 
 .sheet-update-alert .sheet-container .sheet-content {
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid var(--border-color);
     margin: 0 0 10px 0;
     border-radius: 5px;
     background: aliceblue;
@@ -284,6 +300,8 @@ input.sheet-range-damage-dice-icon[value="d4skull"] ~ button[type=roll].roll_dam
     text-align: center;
     font-weight: bold;
     text-transform: lowercase;
+    color:var(--header-text);
+    background-color: var(--header-bg);
     font-variant: small-caps;
     letter-spacing: 1px;
     white-space: nowrap;
@@ -293,15 +311,33 @@ input.sheet-range-damage-dice-icon[value="d4skull"] ~ button[type=roll].roll_dam
 .sheet-row {
     height: 22px;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     margin-top: 2px;
+}
+.sheet-row:nth-child(1), .sheet-row+.sheet-hr{
+    height: auto;
+}
+
+.sheet-row:nth-child(even){
+    background-color: var(--row-bg);
+}
+.sheet-row:nth-child(odd){
+    background-color: var(--odd-row-bg);
 }
 
 .sheet-cell {
+    text-align: center;
     box-sizing: border-box;
     float: left;
     height: 22px;
     line-height: 22px;
     padding: 0px 1px;
+}
+
+.sheet-cell{
+    padding-top: 0px!important;
 }
 
 .sheet-cell > * {
@@ -322,20 +358,17 @@ input {
 .charsheet .sheet-row input[readonly], 
 .charsheet .sheet-row input[readonly="readonly"],
 .charsheet .sheet-row input:disabled {
-    background-color: #c9c9c9;
+    background-color: var(--input-disabled-bg);
     border-bottom: none !important;
 }
 
-.charsheet .sheet-row input[type="text"]:enabled{border-bottom: 1px solid black;}
+.charsheet .sheet-row input[type="text"]:enabled{border-bottom: 1px solid var(--border-color);}
 
-.charsheet .sheet-row input[type="number"]:read-write{border-bottom: 1px solid black;}
+.charsheet .sheet-row input[type="number"]:read-write{border-bottom: 1px solid var(--border-color);}
 
-.charsheet .sheet-row input[type="number"]:-moz-read-write{border-bottom: 1px solid black;}
+.charsheet .sheet-row input[type="number"]:-moz-read-write{border-bottom: 1px solid var(--border-color);}
 
-.sheet-box .sheet-row-details {
-    background: #FAFAFA;
-}
-
+.sheet-box .sheet-row-details,
 .sheet-box .sheet-row-details2,
 .sheet-box .sheet-melee-notebox,
 .sheet-box .sheet-ranged-notebox {
@@ -354,8 +387,8 @@ input {
     float: right;
     margin: 10px 0;
     padding: 5px 0;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+    border-top: 2px solid var(--border-color);
+    border-bottom: 2px solid var(--border-color);
 }
 
 .sheet-rapid-fire-table img {
@@ -407,7 +440,7 @@ input.sheet-tab + span {
 input.sheet-tab:checked + span {
     color: #555;
     border: 1px solid #a8a8a8;
-    border-bottom-color: white;
+    border-bottom-color: var(--sheet-bg);
 }
 
 input.sheet-tab0 + span {
@@ -429,7 +462,7 @@ input.sheet-tab0 + span {
 }
 
 .sheet-sub-row .sheet-popup {
-    color: #AE4D4D;
+    color: var(--secondary-highlight);
 }
 
 .sheet-row.sheet-margin-bottom {
@@ -570,7 +603,7 @@ input.sheet-tab0 + span {
     padding: 0 2px;
     line-height: 22px;
     text-align: center;
-    background: transparent;
+    background: var(--sheet-bg);
     border: none;
     box-shadow: none;
     cursor: initial;
@@ -796,7 +829,7 @@ input.sheet-tab0 + span {
 
 /* ===== CSS TOOLTIP ===== */
 .sheet-popup {
-    color: darkred;
+    color: var(--highlight-text);
 }
 
 .sheet-popup + .sheet-tooltip {
@@ -816,7 +849,7 @@ input.sheet-tab0 + span {
     display: inline;
     position: absolute;
     color: #111;
-    border: 2px solid BLACK;
+    border: 2px solid var(--border-color);
     border-radius:5px;
     background: #66ffff;
     line-height: 1.5em;
@@ -842,7 +875,7 @@ input.sheet-tab0 + span {
 }
 
 .sheet-tooltip tbody tr:nth-child(odd) {
-    background: #FFF;
+    background: var(--sheet-bg);
 }
 
 .sheet-tooltip input[type="text"].sheet-textInline {
@@ -1017,6 +1050,9 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     color: #404040;
 }
 
+.sheet-hp-lift-container{float: left; width:186px}
+
+.sheet-stats{width: 180px;}
 .sheet-stats input { font-size: 13px;}
 .sheet-stats .sheet-header .sheet-col0 { width: 72px; }
 .sheet-stats .sheet-header .sheet-col1 { width: 41px; }
@@ -1031,6 +1067,11 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-stats .sheet-row .sheet-col1 { width: 35px; }
 .sheet-stats .sheet-row .sheet-col2 { width: 35px; }
 .sheet-stats .sheet-row .sheet-col3 { width: 35px; }
+
+.sheet-row-current-points{
+    justify-content: flex-start;
+}
+
 .sheet-stats .sheet-row-current-points .sheet-col0 { height: 24px; }
 .sheet-stats .sheet-row-current-points .sheet-col1 { width: 35px; }
 .sheet-stats .sheet-row-current-points .sheet-col2 { 
@@ -1094,7 +1135,6 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-stats .sheet-tooltip table { text-align: left; font-size: 9px; }
 .sheet-stats .sheet-tooltip table .sheet-label { text-align: left; font-size: 9px; }
 .sheet-stats .sheet-cell {
-    margin: auto;
     padding: 0.2em;
 }
 
@@ -1266,8 +1306,8 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 
 .sheet-movement-feats .sheet-header {
     font-size: 15px;
-    color: #fff;
-    background: #555;
+    color: white;
+    background: var(--header-bg);
     margin-bottom: 5px;
 }
 
@@ -1298,10 +1338,13 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     letter-spacing: 1px;
     white-space: nowrap;
     height: 22px;
-    border-bottom: 1px solid black;
+    width: 100%;
+    border-bottom: 1px solid var(--border-color);
     margin-bottom: 5px;
 }
-.sheet-container-feats .sheet-row .sheet-title { text-align: center; }
+
+
+.sheet-container-feats .sheet-row .sheet-title { text-align: center;}
 .sheet-container-feats .sheet-row .sheet-col0 { width: 50px; }
 .sheet-container-feats .sheet-row .sheet-col1 { width: 35px; }
 .sheet-container-feats .sheet-row .sheet-col2 { width: 40px; }
@@ -1312,15 +1355,15 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 }
 
 .sheet-container-feats .sheet-container-flying {
-    margin-left: 10px;
+    margin-left: 8px;
 }
-
+.sheet-container-swimming, .sheet-container-flying,.sheet-container-jumping{ max-width: 18rem;}
 .sheet-container-feats .sheet-container-swimming {
-    margin-left: 20px;
+    margin-left: 16px;
 }
 
 .sheet-container-feats .sheet-container-jumping {
-    margin-left: 20px;
+    margin-left: 16px;
 }
 
 /* show/hide table */
@@ -1369,7 +1412,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-traits .sheet-header {
-    background: #f0f0f0;
+    color:var(--header-tex);
+    background: var(--header-bg);
 }
 
 .sheet-traits .sheet-col0 { width: calc(100% - 137px); }
@@ -1396,7 +1440,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-disadvantages { width: calc(100% - 0.4em); }
 
 .sheet-disadvantages .sheet-header {
-    background: #f0f0f0;
+    color:var(--header-tex);
+    background: var(--header-bg);
 }
 
 .sheet-disadvantages .sheet-col0 { width: calc(100% - 137px); }
@@ -1427,7 +1472,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-racial { width: calc(100% - 0.4em); }
 
 .sheet-racial .sheet-header {
-    background: #f0f0f0;
+    color:var(--header-tex);
+    background: var(--header-bg);
 }
 
 .sheet-racial .sheet-col0 { width: calc(100% - 137px); }
@@ -1477,7 +1523,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-general-bio .sheet-header {
-    background: #f0f0f0;
+    color:var(--header-text);
+    background: var(--header-bg);
     margin-bottom: 5px;
 }
 
@@ -1516,7 +1563,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 .sheet-bio-description .sheet-header,
 .sheet-encumberance .sheet-header {
-    background: #f0f0f0;
+    color:var(--header-text);
+    background: var(--header-bg);
     margin-bottom: 5px;
 }
 
@@ -1578,7 +1626,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-background-info .sheet-header {
-    background: #f0f0f0;
+    color:var(--header-text);
+    background: var(--header-bg);
     margin-bottom: 5px;
 }
 
@@ -1642,7 +1691,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-misc-notes .sheet-header {
-    background: #f0f0f0;
+    color:var(--header-text);
+    background: var(--header-bg);
     margin-bottom: 5px;
 }
 
@@ -1677,7 +1727,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-training-notes .sheet-header {
-    background: #f0f0f0;
+    color:var(--header-text);
+    background: var(--header-bg);
     margin-bottom: 5px;
 }
 
@@ -2111,7 +2162,8 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 .sheet-firing-up-down .sheet-table .sheet-title {
-    background-color: #f0f0f0;
+    color:var(--header-text);
+    background: var(--header-bg);
 }
 
 .sheet-firing-up-down .sheet-table .sheet-title .sheet-cell {
@@ -2155,7 +2207,7 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
     height: 19px;
     line-height: 19px;
     color: white;
-    background: darkred;
+    background: var(--highlight-text);
     border-radius: 3px;
     font-weight: bold;
 }
@@ -2167,7 +2219,8 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 .sheet-falling-collision .sheet-table .sheet-title {
-    background-color: #f0f0f0;
+    color:var(--header-text);
+    background: var(--header-bg);
 }
 
 .sheet-falling-collision .sheet-table .sheet-title .sheet-cell {
@@ -2218,7 +2271,7 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
     height: 19px;
     line-height: 19px;
     color: white;
-    background: darkred;
+    background: var(--highlight-text);
     border-radius: 3px;
     font-weight: bold;
 }
@@ -2230,7 +2283,8 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 .sheet-demolition .sheet-table .sheet-title {
-    background-color: #f0f0f0;
+    color:var(--header-text);
+    background: var(--header-bg);
 }
 
 .sheet-demolition .sheet-table .sheet-title .sheet-cell {
@@ -2279,7 +2333,7 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
     height: 19px;
     line-height: 19px;
     color: white;
-    background: darkred;
+    background: var(--highlight-text);
     border-radius: 3px;
     font-weight: bold;
 }
@@ -2504,18 +2558,18 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 }
 
 .sheet-rolltemplate-addToTracker .sheet-container table.sheet-result th {
-    color: darkred;
+    color: var(--highlight-text);
     padding: 2px;
     font-size: 14px;
     font-style: normal;
     font-weight: bold;
-    background-color: white;
+    background-color: var(--sheet-bg);
 }
 
 .sheet-rolltemplate-addToTracker .sheet-container table.sheet-result td.sheet-subhead {
     padding: 2px;
-    border-bottom: 1px solid black;
-    background-color: white;
+    border-bottom: 1px solid var(--border-color);
+    background-color: var(--sheet-bg);
     font-size: 12px;
     font-weight: bold;
     text-align: left;
@@ -2525,20 +2579,20 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
     padding: 4px 2px;
     text-align: left;
     font-style: normal;
-    /*border-bottom: 1px solid black;*/
+    /*border-bottom: 1px solid var(--border-color);*/
 }
 
 .sheet-rolltemplate-addToTracker .sheet-container table.sheet-result td.sheet-label {
     width: 45px;
     line-height: 14px;
     font-style: normal;
-    /*border-bottom: 1px solid black;*/
+    /*border-bottom: 1px solid var(--border-color);*/
 }
 
 .sheet-rolltemplate-addToTracker .sheet-container table.sheet-result span.sheet-damageType {
     font-style: italic;
     font-size: .9em;
-    color: darkred;
+    color: var(--highlight-text);
 }
 
 .sheet-rolltemplate-addToTracker .sheet-container table.sheet-result tr:nth-child(odd) {
@@ -2570,7 +2624,7 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 
 .sheet-rolltemplate-skillRoll .sheet-container hr.sheet-border {
     margin: 5px 0 5px 0;
-    border-top: 1px solid black;
+    border-top: 1px solid var(--border-color);
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result {
@@ -2583,31 +2637,31 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result th {
-    color: darkred;
+    color: var(--highlight-text);
     padding: 2px;
     font-size: 14px;
     font-weight: bold;
-    background-color: white;
+    background-color: var(--sheet-bg);
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result td.sheet-subhead {
     padding: 2px;
-    border-bottom: 1px solid black;
-    background-color: white;
+    border-bottom: 1px solid var(--border-color);
+    background-color: var(--sheet-bg);
     font-size: 12px;
     font-weight: bold;
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result td {
     padding: 4px 2px;
-    /*border-bottom: 1px solid black;*/
+    /*border-bottom: 1px solid var(--border-color);*/
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result td.sheet-label {
     width: 45px;
     font-weight: bold;
     line-height: 14px;
-    /*border-bottom: 1px solid black;*/
+    /*border-bottom: 1px solid var(--border-color);*/
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result td span.sheet-ref-label {
@@ -2616,7 +2670,7 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result span.sheet-damageType {
     font-weight: bold;
-    color: darkred;
+    color: var(--highlight-text);
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result span.sheet-title {
@@ -2674,13 +2728,13 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result .sheet-effective-skill .inlinerollresult {
     background-color: black;
-    border: 2px solid black;
+    border: 2px solid var(--border-color);
     color: white;
 }
 
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result .sheet-damage-roll .inlinerollresult {
-    background-color: darkred;
-    border: 2px solid darkred;
+    background-color: var(--highlight-text);
+    border: 2px solid var(--highlight-text);
     color: white;
 }
 
@@ -2734,7 +2788,7 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 }
 
 .sheet-mark-updates-as-read span {
-    color: darkred;
+    color: var(--highlight-text);
     font-weight: bold;
 }
 
